2013-05-30  Tom Tromey  <tromey@redhat.com>

	* utils.c (internal_vproblem): Call do_cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* linespec.c (find_linespec_symbols): Don't reassign to 'cleanup'.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* cli/cli-script.c (setup_user_args): Don't return after error.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* somread.c (som_symtab_read): Call do_cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* printcmd.c (print_command_1): Unconditionally call do_cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (cd_command, alias_command): Call do_cleanups.
	* cli/cli-dump.c (restore_binary_file): Call do_cleanups.
	* interps.c (interpreter_exec_cmd): Call do_cleanups.
	* source.c (show_substitute_path_command): Call do_cleanups.
	(unset_substitute_path_command, set_substitute_path_command):
	Likewise.
	* symfile.c (load_command): Call do_cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* contrib/cleanup_check.py: New file.
	* contrib/gcc-with-excheck: Add option parsing.

2013-05-30  Joel Brobecker  <brobecker@adacore.com>

	* windows-nat.c (windows_delete_thread): Add missing space
	in cast expression.

2013-05-30  Hafiz Abid Qadeer  <abidh@codesourcery.com>

	* inferior.c (top level): Include tilde.h.
	(add_inferior_command): Call tilde_expand on the value of 'exec'
	argument.

2013-05-30  Pedro Alves  <pedro@codesourcery.com>
	    Yao Qi  <yao@codesourcery.com>

	* tracepoint.c (encode_actions_1): Remove parameter 't'.
	Caller update.
	(encode_actions): Likewise.
	* remote.c (remote_download_tracepoint): Caller update.
	* tracepoint.h (encode_actions): Update declaration.

2013-05-30  Pedro Alves  <palves@redhat.com>

	* python/python-internal.h (gdb_Py_DECREF): Cast OP to PyObject
	pointer.

2013-05-30  Yao Qi  <yao@codesourcery.com>

	* remote.c (remote_check_symbols): Remove unused parameter
	'objfile'.
	Declaration update.